--- a/themes/tcs-responsive/css/base.css
+++ b/themes/tcs-responsive/css/base.css
@@ -172,18 +172,29 @@ em{
   height: 100%;
   overflow: hidden;
 }
-.loading{
+.loading,.errorLoading{
     position: fixed;
     z-index: 2000;
     left: 50%;
     height: 36px;
     line-height: 34px;
-    padding: 0 10px 0 50px;
+    padding: 5px 10px 5px 50px;
     color: #fff;
     background: #ff8a00 url(../i/loading.gif) 10px 50% no-repeat;
     font-size: 16px;
     top: 0;
     margin-left: -65px;
+}
+.errorLoading{
+	background: #ff8a00;
+	left: 38%;
+	width:55%;
+	max-width:400px;
+	line-height:16px;
+	font-size:0.9em;
+	height:auto;
+	text-align:center;
+	padding:5px;
 }
 #wrapper{
     position: relative;
@@ -540,8 +551,8 @@ em{
         #footer .updates .btn{
             float: left;
             border-radius: 0 4px 4px 0;
-            height: 28px;
-        
+            height: 32px;
+			border:0px;
             line-height: 30px;
             width: 104px;
             vertical-align: top;
