--- a/wp-content/themes/tcs-responsive/css/base.css
+++ b/wp-content/themes/tcs-responsive/css/base.css
@@ -14,7 +14,7 @@ div, article, aside, details, figcaption, figure, footer, header, hgroup, menu, 
 body {
     line-height: 1.2em;
     /* set default font details */
-    font-family: lato, Arial, Helvetica, sans-serif;
+    font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
     font-size: 14px;
     color: #666;
     -webkit-text-size-adjust:none;
@@ -260,7 +260,7 @@ em{
     position: absolute;
     left: 0;
     top: 27px;
-    width: 260px;
+    width: 330px;
     height: 58px;
     background: url(../i/logo.png) 0 0 no-repeat;
 }
@@ -285,9 +285,6 @@ em{
     
         position: relative;
 }
-     #mainNav .root > li:hover{
-         background: #FF8A00;
-     }
      #mainNav .root > li > .child{
      
         display: none;
@@ -304,10 +301,11 @@ em{
          min-width: 80px;
          position: absolute;
          min-width: 100%;
+         left: 15px;
 }
      
         #mainNav .root > li a{
-            padding: 0 10px 0 15px;
+            padding: 0 10px 12px 15px;
             color: #666;
             -moz-transition-duration: .3s; 
             -webkit-transition-duration: .3s; 
@@ -320,7 +318,7 @@ em{
 }
         #mainNav .root .child > li{
             padding: 0 10px;
-        
+        			width: 175px;
             border-top: 1px solid #FF7A00;  
 }
         #mainNav .root .child a{            
@@ -338,17 +336,9 @@ em{
         #mainNav .root .child li:hover{
     background: #F00;
         }
-        #mainNav .root > li:hover a{
-            color: #fff;        
+        #mainNav .root > li:hover a{      
             text-decoration: none;
 }
-        
-        #mainNav .root > li a:hover{
-            background: #F00;
-}
-        #mainNav .root > li > a:hover{
-                background: #FF8A00;
-    }
     
 #navigation .btnRegister{
     position: absolute;
@@ -452,6 +442,8 @@ em{
 }
     #footer .connected h4{
         padding-bottom: 16px;
+        float: left;
+        margin-right: 20px;
     }
 #footer nav,
 #footer .rootNode{
@@ -478,25 +470,40 @@ em{
     #footer .rootNode > a{
         line-height: 24px;
         padding-bottom: 6px;
-        font-size: 18px;
+        font-size: 20px;
         color: #D8D8D8;
         -webkit-tap-highlight-color: rgba(0,0,0,0);
     
         display: block;
 }
+
+#footer .updates .email{
+  	width: 223px;
+}
+#footer .copyright{
+    float: left;
+    font-size: 15px;
+    margin-top: 15px;
+}
+	#footer .copyright a{
+    color: #a1a1a1;
+    text-decoration: underline;
+    font-weight: normal;
+	}
 #footer .connected{
     float: right;
 }
     #footer .social ul{
         overflow: hidden;
-    
+    			margin-top: 2px;
         display: block;
+        float: left;
 } 
         #footer .social ul li{
             float: left;
-            margin-left: 28px;
-        
-            height: 35px;  width: 35px;
+								margin-left: 0px;
+								height: 35px;
+								width: 26px;
 }
         #footer .social ul li:first-child{
             margin-left: 0;
@@ -506,45 +513,40 @@ em{
             text-align: left;
             text-indent: -100px;
             overflow: hidden;
-            height: 35px;
-            width: 35px;
+            height: 20px;
+            width: 20px;
             background: url(../i/ico-social.png) no-repeat;
             background-position: 0 0;            
             -moz-transition-duration: 0s; -webkit-transition-duration: 0s; transition-duration: 0s;
         }
         #footer .social ul li a:hover{
-            background-position: 0 -36px;
+            background-position: 0 -20px;
         }
         #footer .social ul li .tw{
-            background-position: 0 -100px;
+            background-position: 0 -40px;
         }
         #footer .social ul li .gp{
-            background-position: 0 -200px;
+            background-position: 0 -80px;
         }
         #footer .social ul li .in{
-            background-position: 0 -300px;
+            background-position: 0 -120px;
         }
         #footer .social ul li .tw:hover{
-            background-position: 0 -136px;
+            background-position: 0 -60px;
         }
         #footer .social ul li .gp:hover{
-            background-position: 0 -236px;
+            background-position: 0 -100px;
         }
         #footer .social ul li .in:hover{
-            background-position: 0 -336px;
+            background-position: 0 -140px;
         }
-        #footer .updates .row{
-            overflow: hidden;
-        
-            width: 310px;
-}
         #footer .updates .email{
             float: left;
-        
             border-radius: 4px 0 0 4px;
-            width: 193px;
+            width: 233px;
             vertical-align: top;
             color: #a1a1a1;
+            font-size: 15px;
             behavior: url(./wp-content/themes/tcs-responsive/css/PIE.htc);
             box-shadow: none;
 }
@@ -552,8 +554,135 @@ em{
             float: left;
             border-radius: 0 4px 4px 0;
             height: 32px;
-			border:0px;
+								border-top:0px;
+								border-left:0px;
+								border-right:0px;
             line-height: 30px;
             width: 104px;
             vertical-align: top;
 }
+
+#footer .footerContentSection{
+		width: 289px;
+		margin-right: 58px;
+		float: left;
+}
+	#footer .footerContentSection.aboutTopCoder{
+			margin-right: 0px;
+	}
+	#footer .title{
+			font-size: 18px;
+			color: #fff;
+	}
+	#footer .twFollowIcon{
+			height: 13px;
+			width: 24px;
+	   background: url(../i/footer-twitter-icon.png) no-repeat;
+	   background-position: 0 0;
+	   display: inline-block;
+	}
+	#footer .twFollowBtnText{
+	   display: inline-block;   
+	}
+	
+#footer a.btn.btnFooter{
+	width: 85px;
+	height: 26px;
+	line-height: 28px;
+	border-radius: 4px;
+	font-size: 15px;
+}
+#footer .footerContent{
+	margin-top: 27px;
+	margin-bottom: 20px;	
+}
+#footer .footerTwEntry{
+	margin-bottom: 20px;	
+}
+#footer .footerBlogEntry{
+	margin-bottom: 20px;	
+}
+#footer .privacyStmtLink{
+	padding-right: 5px;
+}
+#footer .legalDisclaimerLink{
+	padding-left: 5px;
+}
+#footer .btnSubmitFooter{
+	font-size: 15px;
+}
+
+.headerTopRightMenu{
+	float: right;
+}
+	.headerTopRightMenu .headerTopRightMenuLink{
+		float: left;
+		padding-left: 8px;
+		height: 23px;
+		padding-right: 10px;
+		padding-top: 10px;
+	}
+		.headerTopRightMenu .headerTopRightMenuLink.last{
+			border-right: none;
+			padding-right: 0px;
+		}
+		.headerTopRightMenu .headerTopRightMenuLink.search{
+			padding-right: 12px;
+		}
+		.headerTopRightMenu .headerTopRightMenuLink.search.active{
+			background-color: #00aeff;
+		}
+		.headerTopRightMenu .headerTopRightMenuLink.search.active .text a{
+			color: #fff;
+		}
+		.headerTopRightMenu .headerTopRightMenuLink .text{
+			color: #666;
+			font-size: 12px;
+			font-weight: bold;
+		}
+			.headerTopRightMenu .headerTopRightMenuLink .text a{
+				color: #666;
+			}
+			.headerTopRightMenu .headerTopRightMenuLink.logIn .text a{
+				color: #00aeff;
+			}
+			.headerTopRightMenu .headerTopRightMenuLink .text{
+				color: #666;
+				font-size: 13px;
+				font-weight: bold;
+				float: left;
+			}
+			.headerTopRightMenu .headerTopRightMenuLink.logIn .icon{
+				height: 13px;
+				margin-top: 7px;
+				width: 8px;
+				background: url(../i/login-arrow.png) no-repeat;
+				background-position: 0 0;
+				float: left;
+				margin-left: 4px;
+			}
+			.headerTopRightMenu .headerTopRightMenuLink.search .icon{
+				height: 12px;
+				width: 11px;
+		   background: url(../i/search-icon.png) no-repeat;
+		   background-position: 0 0;
+		   float: left;
+		   margin-top: 3px;
+		   margin-right: 4px;
+		   margin-left: 3px;
+			}
+			.headerTopRightMenu .headerTopRightMenuLink.search.active .icon{
+		   background: url(../i/search-icon-active.png) no-repeat;
+			}
+			.headerTopRightMenu .separator{
+				height: 17px;
+				width: 1px;
+		   background-color: #eee;
+		   float: left;
+		   margin-left: 1px;
+		   margin-right: 1px;
+		   margin-top: 10px;
+			}
+			.headerTopRightMenu .separator.beforeSearch{
+				margin-right: 0px;
+			}
