--- a/wp-content/themes/tcs-responsive/css/base.css
+++ b/wp-content/themes/tcs-responsive/css/base.css
@@ -504,6 +504,7 @@ em{
 								margin-left: 0px;
 								height: 35px;
 								width: 26px;
+								margin-right: 2px;
 }
         #footer .social ul li:first-child{
             margin-left: 0;
@@ -513,32 +514,32 @@ em{
             text-align: left;
             text-indent: -100px;
             overflow: hidden;
-            height: 20px;
-            width: 20px;
+            height: 27px;
+								width: 27px;
             background: url(../i/ico-social.png) no-repeat;
             background-position: 0 0;            
             -moz-transition-duration: 0s; -webkit-transition-duration: 0s; transition-duration: 0s;
         }
         #footer .social ul li a:hover{
-            background-position: 0 -20px;
+            background-position: -45px 0px;
         }
         #footer .social ul li .tw{
-            background-position: 0 -40px;
-        }
-        #footer .social ul li .gp{
-            background-position: 0 -80px;
-        }
-        #footer .social ul li .in{
-            background-position: 0 -120px;
+            background-position: 0 -29px;
         }
         #footer .social ul li .tw:hover{
-            background-position: 0 -60px;
+            background-position: -45px -29px;
+        }
+        #footer .social ul li .gp{
+            background-position: 0 -57px;
         }
         #footer .social ul li .gp:hover{
-            background-position: 0 -100px;
+            background-position: -45px -57px;
+        }
+        #footer .social ul li .in{
+            background-position: 0 -86px;
         }
         #footer .social ul li .in:hover{
-            background-position: 0 -140px;
+            background-position: -45px -86px;
         }
         #footer .updates .email{
             float: left;
