--- a/wp-content/themes/tcs-responsive/css/challenge-detail-software.css
+++ b/wp-content/themes/tcs-responsive/css/challenge-detail-software.css
@@ -9,6 +9,7 @@
 	overflow:hidden;
 }
 
+
  .challenge-detail .pageHeading h2{
 	font-size: 14px;
 	line-height: 30px;
@@ -74,6 +75,8 @@
 #stepBox .middleColumn table p{ 
 	font-size: 14px;
 	font-weight: bold;  
+	padding-bottom: 2px;
+	padding-top: 2px;
 }
 
 #stepBox .middleColumn table .realibilityPara span{ 
@@ -124,7 +127,7 @@
     border-color: #46b314;
 }
 #stepBox .rightColumn .nextBox .allDeadlineNextBoxContent {
-   padding: 10px 6px 10px 6px; 
+   padding: 6px; 
 	height: 82px;
 }
 #stepBox .rightColumn .nextBox .allDeadlineNextBoxContent p {
@@ -132,6 +135,7 @@
     font-size: 12px;
     margin-bottom: 5px;
 } 
+
 #stepBox .rightColumn .nextBox .allDeadlineNextBoxContent label {
     display: block;
     float: left;
@@ -593,7 +597,7 @@
 	color: #64c51c;
 }
 
-.challenge-detail.develop .btnAction strong{
+.challenge-detail .btnAction strong{
 	float:left;
 	height:100%;
 	width:77%;
@@ -637,12 +641,11 @@
 	height: 90px;
 }
 #stepBox .rightColumn .nextBox .allDeadlineNextBoxContent.studio label{
-	width: 113px;
+	width: 140px;
 }
 .challenge-detail .tabNav span.inactive{
 	color: #aaa;
 	cursor: default;
-	font-size: 16px;
 	margin: 0 10px;
 }
 .morePayments{
@@ -655,6 +658,8 @@
 }
 #stepBox .middleColumn.studio table p{
 	font-size: 12px;
+	padding-top: 2px;
+	padding-bottom: 2px;
 }
 #stepBox .middleColumn table .noPrize h2, #stepBox .middleColumn table .noPrize h3{
 	color: #d1d1d1;	
@@ -764,7 +769,7 @@
 		float:none;
 		display:block;
 		margin: 0 auto;
-		width:119px;
+		width:180px;
 	}
 	#stepBox .rightColumn{
 		float:right;
@@ -947,5 +952,10 @@
 	.challenge-detail #viewRegistrant.tableWrap{
 		padding-right: 0px;	
 	}
-	
+	#stepBox .rightColumn .nextBox .nextBoxContent, #stepBox .rightColumn .nextBox .allDeadlineNextBoxContent {
+		padding-left: 5px;
+		padding-right: 5px;
+		padding-top: 22px;
+		padding-bottom: 22px;
+	}
 }
