Revert "Build PHP based SSO Callback"
This reverts commit 545a6110ecfa92951b1d3d2a2a8f20567109f9a5.

--- a/wp-content/themes/tcs-responsive/css/register-login.css
+++ b/wp-content/themes/tcs-responsive/css/register-login.css
@@ -40,63 +40,48 @@ hover style icons
 	background-position: -192px bottom;
 }
 
-.animeMan {
-	width: 40px;
-	height: 44px;
+.animeMan, .animeManHover {
+	width: 146px;
+	height: 99px;
 	display: block;
-	float: left;
 	margin: 0 auto;
 	background: url(../i/menButtons.png) no-repeat;
 	cursor: pointer;
-	margin-top: -3px;
 }
 
 .animeMan{
 	border-top: 1px solid #fff;
 }
-.row.planToCompete{
-	margin-top: 15px;
-	margin-bottom: 15px;	
+.manBlue {
+	
 }
-.row.planToCompete label{
-	display: block;
-	float: left;	
-}
-.options{
-	display: inline-block;
-}
-.options .checkBox{
-	float: left;
-	margin-top: 5px;
-	margin-left: 5px;
-	margin-right: 5px;
-}
-.manBlue:hover {
-	background-position: 0 -44px;
+
+.manBlueHover {
+	background-position: 0 -100px;
 }
 
 .manGreen {
-	background-position: -40px 0;
+	background-position: -146px 0;
 }
 
-.manGreen:hover {
-	background-position: -40px -44px;
+.manGreenHover {
+	background-position: -146px bottom;
 }
 
 .manYellow {
-	background-position: -80px 0;
+	background-position: -292px 0;
 }
 
-.manYellow:hover {
-	background-position: -80px -44px;
+.manYellowHover {
+	background-position: -292px bottom;
 }
 
 .manGrey {
-	background-position: -120px 0;
+	background-position: -438px 0;
 }
 
-.manGrey:hover {
-	background-position: -120px -44px;
+.manGreyHover {
+	background-position: -438px bottom;
 }
 
 /*
@@ -329,6 +314,10 @@ Register modal
 		float: left;
 	}
 
+
+		#register .options {
+			background: url(../i/optionsBg.png) no-repeat top center;
+		}
 		#register .person .checkBox{
 			background: url(../i/checkBoxBg.png) repeat-x;
 			color: #fff;
