--- a/wp-content/themes/tcs-responsive/css/blog.css
+++ b/wp-content/themes/tcs-responsive/css/blog.css
@@ -5,8 +5,7 @@ a.blueLink {
 	-moz-transition-duration: .3s; -webkit-transition-duration: .3s; transition-duration: .3s;
 }
 a.blueLink:hover {
-	color: #0071bc;
-	text-shadow: 0 0 3px #989898;
+	color: #FFB800;
 }
 .blogCategoryMenu {
 	float:left;
@@ -429,7 +428,7 @@ h3.popularPostTitle {
 }
 
 	.blogItem  .blogTitle {
-		font-size:18px;
+		font-size:21px;
 		font-weight:normal;
 		line-height:22px;
 		color:#0071bc;
